# smg-editor

./: .gitignore  .gitmodules  CMakeLists.txt  Spec.md  imgui.ini
include/RedStar/: Assert.h  GLFWOpenGLContext.h  GLFWWindow.h  GraphicsContext.h  ImGuiLayer.h  Input.h  Layer.h  LayerStack.h  Logging.h  RedStarApp.h  SMGEditor.h  Window.h
include/RedStar/Events/: CharTypedEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
include/RedStar/ImGui/: ImGuiRenderer.h  ImGuiRenderer_GLFW_OpenGL3.h
include/SMGEditor/: Logging.h  MyHeader.h  SMGEditor.h
src/: CMakeLists.txt  GLFWOpenGLContext.cpp  GLFWWindow.cpp  ImGuiLayer.cpp  Input.cpp  LayerStack.cpp  Logging.cpp  RedStarApp.cpp  SMGEditor.cpp  main.cpp  myfile.cpp
src/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer_GLFW_OpenGL3.cpp
tests/: CMakeLists.txt  test_file.cpp
